--- a/src/components/layout/ProductCard.css
+++ b/src/components/layout/ProductCard.css
@@ -8,6 +8,7 @@
     position: relative;
     height: 75rem;
     width: 100%;
+    min-width: 30rem;
 
     background-color: var(--c-white);
     font-family: var(--font-family-paragraph);
